tdf#154940 change label from "Variable" -> "Custom"
Change-Id: I24db05dc26742513c1b6225d5c601ee19078ab87
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151117
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/cui/uiconfig/ui/zoomdialog.ui
+++ b/cui/uiconfig/ui/zoomdialog.ui
@@ -194,7 +194,7 @@
                         <property name="spacing">12</property>
                         <child>
                           <object class="GtkRadioButton" id="variable">
-                            <property name="label" translatable="yes" context="zoomdialog|variable">Variable:</property>
+                            <property name="label" translatable="yes" context="zoomdialog|variable">Custom:</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
@@ -228,7 +228,7 @@
                             <property name="truncate-multiline">True</property>
                             <child internal-child="accessible">
                               <object class="AtkObject" id="zoomsb-atkobject">
-                                <property name="AtkObject::accessible-name" translatable="yes" context="zoomdialog|zoomsb-atkobject">Variable</property>
+                                <property name="AtkObject::accessible-name" translatable="yes" context="zoomdialog|zoomsb-atkobject">Custom</property>
                                 <property name="AtkObject::accessible-description" translatable="yes" context="zoomdialog|extended_tip|zoomsb">Enter the zoom factor at which you want to display the document. Enter a percentage in the box.</property>
                               </object>
                             </child>
