Capitalize "Display tracked changes" string to match others
Change-Id: I012871296dcf8b3d27003c681b4fa2179bb0f943
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151165
Tested-by: Jenkins
Reviewed-by: Rizal Muttaqin <rizmut@libreoffice.org>

--- a/sw/uiconfig/swriter/ui/viewoptionspage.ui
+++ b/sw/uiconfig/swriter/ui/viewoptionspage.ui
@@ -324,7 +324,7 @@
                   <object class="GtkLabel" id="changeslabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="label" translatable="yes" context="viewoptionspage|changeslabel">Display tracked changes</property>
+                    <property name="label" translatable="yes" context="viewoptionspage|changeslabel">Display Tracked Changes</property>
                     <attributes>
                       <attribute name="weight" value="bold"/>
                     </attributes>
