Resolves tdf#153499 - Hide newly introduced frame label
Frame content is not shown for existing entries
Follow-up to 4ec75d22eb916e3809e9e92f77fd25e33f6b21ee

Change-Id: Ic2b40b19424245ede326a5ef5b53f684ca8a3f94
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151166
Reviewed-by: Seth Chaiklin <sdc.blanco@youmail.dk>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/sw/uiconfig/swriter/ui/indexentry.ui
+++ b/sw/uiconfig/swriter/ui/indexentry.ui
@@ -582,8 +582,8 @@
             </child>
             <child type="label">
               <object class="GtkLabel" id="selectedentrytitle">
-                <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <property name="no-show-all">True</property>
                 <property name="label" translatable="yes" context="indexentry|selectedentrytitle">For Selected Entry</property>
                 <attributes>
                   <attribute name="weight" value="bold"/>
