tdf#86630 sw page number wizard: add page total
This is a squashed commit,
including 00e2e3210da57c138bd998481a89760b8c7a0e47
    tdf#86630 sw page number wizard: use '/' for page total

1 / 3 is the format of the output.
Not totally clear, but it is at least not in English,
and I'm fairly certain I've seen this format used numerous times.

At least everything is there, and all the user needs to do is
modify the / to be whatever they want.

I checked to see if by some miracle localedata had a specification
for "X of Y" but it doesn't.

Change-Id: Iae1e74e612ec449f72086b3f5a5e32713fee4d27
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151173
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151904
Tested-by: Justin Luth <jluth@mail.com>

--- a/sw/uiconfig/swriter/ui/pagenumberdlg.ui
+++ b/sw/uiconfig/swriter/ui/pagenumberdlg.ui
@@ -173,6 +173,28 @@
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkCheckButton" id="pagetotalCheckbox">
+                    <property name="label" translatable="yes" context="pagenumberdlg|pagetotalCheckbox">Include page total</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="margin-start">18</property>
+                    <property name="margin-top">3</property>
+                    <property name="use-underline">True</property>
+                    <property name="draw-indicator">True</property>
+                    <child internal-child="accessible">
+                      <object class="AtkObject" id="pagetotalCheckbox-atkobject">
+                        <property name="AtkObject::accessible-description" translatable="yes" context="pagenumberdlg|extended_tip|pagetotalCheckbox">Also insert the total number of pages</property>
+                      </object>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">5</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkLabel" id="numfmtLabel">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
@@ -193,7 +215,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">5</property>
+                    <property name="position">6</property>
                   </packing>
                 </child>
                 <child>
@@ -212,7 +234,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">6</property>
+                    <property name="position">7</property>
                   </packing>
                 </child>
               </object>
