tdf#154186 change "OK" to "Apply" and rearrange button position
  Some buttons are sorted automatically. As a result, the "close"
  button appears in the desired position, after the label change.

Change-Id: I67ce06825a642fa34086f97a99cde8ac2acb1ff6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151195
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>

--- a/sw/uiconfig/swriter/ui/indexentry.ui
+++ b/sw/uiconfig/swriter/ui/indexentry.ui
@@ -60,6 +60,7 @@
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
                 <property name="receives-default">True</property>
+                <property name="tooltip-text" translatable="yes" context="indexentry|tooltip_text|close">Close dialog without saving non-applied changes.</property>
                 <property name="use-underline">True</property>
               </object>
               <packing>
@@ -104,7 +105,7 @@
             </child>
             <child>
               <object class="GtkButton" id="ok">
-                <property name="label" translatable="yes" context="stock">_OK</property>
+                <property name="label" translatable="yes" context="stock">_Apply</property>
                 <property name="can-focus">True</property>
                 <property name="can-default">True</property>
                 <property name="has-default">True</property>
