Explicitly use the adjectival form here
For the longest time, I had a gripe with commit 6efb46c6493d4c3c2208dcbea25471c0268fc10c
but I couldn’t explain to myself why. And after I proofread some of my own translation
work I finally understood why — the word “archive” is ambiguous in that it can refer to
archival science (which is the intended meaning here, given the context of the ISO 19005-1
standard) or to computer files that contain other files inside it (vd. Wikipedia article
https://en.wikipedia.org/wiki/Archive_file). Me, and other translators, chose subpar
wordings as a result of the ambiguity (in the case of Spanish, I used “archivador” for
what should have been “archivística” all along). Mea culpa, yes, but the string could’ve
been better.

Change-Id: I96693fc4df1c45b19417ad1bdd4fffd2dc6dc5be
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151316
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/filter/uiconfig/ui/pdfgeneralpage.ui
+++ b/filter/uiconfig/ui/pdfgeneralpage.ui
@@ -654,7 +654,7 @@
                     <property name="row-spacing">6</property>
                     <child>
                       <object class="GtkCheckButton" id="pdfa">
-                        <property name="label" translatable="yes" context="pdfgeneralpage|pdfa">Archive (P_DF/A, ISO 19005)</property>
+                        <property name="label" translatable="yes" context="pdfgeneralpage|pdfa">Archival (P_DF/A, ISO 19005)</property>
                         <property name="visible">True</property>
                         <property name="can-focus">True</property>
                         <property name="receives-default">False</property>
