--- a/formula/uiconfig/ui/functionpage.ui
+++ b/formula/uiconfig/ui/functionpage.ui
@@ -23,7 +23,7 @@
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <property name="halign">start</property>
-        <property name="label" translatable="yes" context="functionpage|label_search">_Search</property>
+        <property name="label" translatable="yes" context="functionpage|label_search">_Search:</property>
         <property name="use-underline">True</property>
         <property name="mnemonic-widget">search</property>
       </object>
@@ -57,7 +57,7 @@
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <property name="halign">start</property>
-        <property name="label" translatable="yes" context="functionpage|label1">_Category</property>
+        <property name="label" translatable="yes" context="functionpage|label1">_Category:</property>
         <property name="use-underline">True</property>
         <property name="mnemonic-widget">category</property>
       </object>
@@ -92,7 +92,7 @@
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <property name="halign">start</property>
-        <property name="label" translatable="yes" context="functionpage|label2">_Function</property>
+        <property name="label" translatable="yes" context="functionpage|label2">_Function:</property>
         <property name="use-underline">True</property>
         <property name="mnemonic-widget">function</property>
       </object>
