--- a/formula/uiconfig/ui/parameter.ui
+++ b/formula/uiconfig/ui/parameter.ui
@@ -58,6 +58,9 @@
             <property name="wrap">True</property>
             <property name="xalign">0</property>
             <property name="yalign">0</property>
+            <attributes>
+              <attribute name="scale" value="0.9"/>
+            </attributes>
           </object>
           <packing>
             <property name="expand">True</property>
