--- a/sd/uiconfig/simpress/ui/presentationdialog.ui
+++ b/sd/uiconfig/simpress/ui/presentationdialog.ui
@@ -662,6 +662,25 @@
                           </packing>
                         </child>
                         <child>
+                          <object class="GtkCheckButton" id="shownavigationbutton">
+                            <property name="label" translatable="yes" context="presentationdialog|shownavigationbutton">Show navigation panel</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="draw_indicator">True</property>
+                            <child internal-child="accessible">
+                              <object class="AtkObject" id="shownavigationbutton-atkobject">
+                                <property name="AtkObject::accessible-description" translatable="yes" context="presentationdialog|extended_tip|shownavigationbutton">Test scroll</property>
+                              </object>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="left_attach">0</property>
+                            <property name="top_attach">7</property>
+                          </packing>
+                        </child>
+                        <child>
                           <placeholder/>
                         </child>
                       </object>
