LOK: Navi-10 hide not needed controls
Hide controls we dont need in navigator now.

Change-Id: Ibf6843be2976bcd4d90e67130dd0cc08d0988c0b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151397
Tested-by: Szymon Kłos <szymon.klos@collabora.com>
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151702
Tested-by: Jenkins

--- a/sw/uiconfig/swriter/ui/navigatorpanel.ui
+++ b/sw/uiconfig/swriter/ui/navigatorpanel.ui
@@ -244,7 +244,7 @@
             <property name="row-spacing">6</property>
             <property name="column-spacing">12</property>
             <child>
-              <object class="GtkBox">
+              <object class="GtkBox" id="gridcontent16">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
