tdf#154872 Add Poisson distribution to Random Number Generators
Change-Id: I325a76423a98a405dfb0f69fbd89eb9253c36390
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151439
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>

--- a/sc/uiconfig/scalc/ui/randomnumbergenerator.ui
+++ b/sc/uiconfig/scalc/ui/randomnumbergenerator.ui
@@ -240,6 +240,7 @@
                       <item id="5" translatable="yes" context="randomnumbergenerator|distribution-liststore">Chi Squared</item>
                       <item id="6" translatable="yes" context="randomnumbergenerator|distribution-liststore">Geometric</item>
                       <item id="7" translatable="yes" context="randomnumbergenerator|distribution-liststore">Negative Binomial</item>
+                      <item id="9" translatable="yes" context="randomnumbergenerator|distribution-liststore">Poisson</item>
                     </items>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="distribution-combo-atkobject">
