--- a/sd/uiconfig/sdraw/ui/notebookbar_compact.ui
+++ b/sd/uiconfig/sdraw/ui/notebookbar_compact.ui
@@ -1259,7 +1259,7 @@
       <object class="GtkMenuItem" id="MenuSlide-PresentationLayout">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="action_name">.uno:PresentationLayout</property>
+        <property name="action_name">.uno:DrawingLayout</property>
       </object>
     </child>
     <child>
@@ -5902,7 +5902,7 @@
                             <child>
                               <object class="GtkToolButton" id="Page-PresentationLayout">
                                 <property name="visible">True</property>
-                                <property name="action_name">.uno:PresentationLayout</property>
+                                <property name="action_name">.uno:DrawingLayout</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
