--- a/sd/uiconfig/sdraw/ui/notebookbar_groupedbar_compact.ui
+++ b/sd/uiconfig/sdraw/ui/notebookbar_groupedbar_compact.ui
@@ -2759,7 +2759,7 @@
       <object class="GtkMenuItem" id="MenuSlide-PresentationLayout">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="action_name">.uno:PresentationLayout</property>
+        <property name="action_name">.uno:DrawingLayout</property>
       </object>
     </child>
     <child>
