tdf#155179 Replace in Solver "=>" with ">="
Change-Id: I4c20f755e042cee114cc81a8135b9801261c8451
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151616
Tested-by: Jenkins
Reviewed-by: Hossein <hossein@libreoffice.org>

--- a/sc/uiconfig/scalc/ui/solverdlg.ui
+++ b/sc/uiconfig/scalc/ui/solverdlg.ui
@@ -596,7 +596,7 @@
                                     <items>
                                       <item translatable="yes" context="solverdlg|op1list">&lt;=</item>
                                       <item translatable="yes" context="solverdlg|op1list">=</item>
-                                      <item translatable="yes" context="solverdlg|op1list">=&gt;</item>
+                                      <item translatable="yes" context="solverdlg|op1list">&gt;=</item>
                                       <item translatable="yes" context="solverdlg|op1list">Integer</item>
                                       <item translatable="yes" context="solverdlg|op1list">Binary</item>
                                     </items>
@@ -618,7 +618,7 @@
                                     <items>
                                       <item translatable="yes" context="solverdlg|op2list">&lt;=</item>
                                       <item translatable="yes" context="solverdlg|op2list">=</item>
-                                      <item translatable="yes" context="solverdlg|op2list">=&gt;</item>
+                                      <item translatable="yes" context="solverdlg|op2list">&gt;=</item>
                                       <item translatable="yes" context="solverdlg|op2list">Integer</item>
                                       <item translatable="yes" context="solverdlg|op2list">Binary</item>
                                     </items>
@@ -640,7 +640,7 @@
                                     <items>
                                       <item translatable="yes" context="solverdlg|op3list">&lt;=</item>
                                       <item translatable="yes" context="solverdlg|op3list">=</item>
-                                      <item translatable="yes" context="solverdlg|op3list">=&gt;</item>
+                                      <item translatable="yes" context="solverdlg|op3list">&gt;=</item>
                                       <item translatable="yes" context="solverdlg|op3list">Integer</item>
                                       <item translatable="yes" context="solverdlg|op3list">Binary</item>
                                     </items>
@@ -662,7 +662,7 @@
                                     <items>
                                       <item translatable="yes" context="solverdlg|op4list">&lt;=</item>
                                       <item translatable="yes" context="solverdlg|op4list">=</item>
-                                      <item translatable="yes" context="solverdlg|op4list">=&gt;</item>
+                                      <item translatable="yes" context="solverdlg|op4list">&gt;=</item>
                                       <item translatable="yes" context="solverdlg|op4list">Integer</item>
                                       <item translatable="yes" context="solverdlg|op4list">Binary</item>
                                     </items>
