--- a/cui/uiconfig/ui/aboutconfigdialog.ui
+++ b/cui/uiconfig/ui/aboutconfigdialog.ui
@@ -16,6 +16,22 @@
       <column type="gchararray"/>
       <!-- column-name id -->
       <column type="gchararray"/>
+      <!-- column-name weight1 -->
+      <column type="gint"/>
+      <!-- column-name weight2 -->
+      <column type="gint"/>
+      <!-- column-name weight3 -->
+      <column type="gint"/>
+      <!-- column-name weight4 -->
+      <column type="gint"/>
+      <!-- column-name sensitive1 -->
+      <column type="gboolean"/>
+      <!-- column-name sensitive2 -->
+      <column type="gboolean"/>
+      <!-- column-name sensitive3 -->
+      <column type="gboolean"/>
+      <!-- column-name sensitive4 -->
+      <column type="gboolean"/>
     </columns>
   </object>
   <object class="GtkDialog" id="AboutConfig">
@@ -194,6 +210,7 @@
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">True</property>
+                    <property name="has-tooltip">True</property>
                     <property name="hexpand">True</property>
                     <property name="vexpand">True</property>
                     <property name="model">liststore1</property>
@@ -217,6 +234,7 @@
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext2"/>
                           <attributes>
+                            <attribute name="sensitive">10</attribute>
                             <attribute name="text">1</attribute>
                           </attributes>
                         </child>
@@ -231,6 +249,7 @@
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext3"/>
                           <attributes>
+                            <attribute name="sensitive">11</attribute>
                             <attribute name="text">2</attribute>
                           </attributes>
                         </child>
@@ -245,6 +264,7 @@
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext1"/>
                           <attributes>
+                            <attribute name="sensitive">12</attribute>
                             <attribute name="text">3</attribute>
                           </attributes>
                         </child>
@@ -259,6 +279,7 @@
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext5"/>
                           <attributes>
+                            <attribute name="sensitive">13</attribute>
                             <attribute name="text">4</attribute>
                           </attributes>
                         </child>
